@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-17T01:00:50Z",
-  "count_outdated" : 1376,
-  "uniques_outdated" : 898,
+  "timestamp" : "2025-08-18T01:00:28Z",
+  "count_outdated" : 1377,
+  "uniques_outdated" : 899,
   "count" : 1386,
   "uniques" : 907,
   "clones" : [
-    {
-      "timestamp": "2025-08-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-06T00:00:00Z",
       "count": 3,
